# cactus-rt

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  README.rst  colcon.pkg  compile_commands.json  package.xml
.github/workflows/: main.yml
archive/: README.md
archive/include/: data_types.h  low_freq_controller.h
archive/src/: data_monitor.cc  high_freq_controller.cc
cactus_tracing/: CMakeLists.txt
cactus_tracing/examples/simple_example/: CMakeLists.txt  main.cc
cactus_tracing/include/cactus_tracing/: thread_tracer.h  tracer.h  track_event.h  tracker.h  utils.h
cactus_tracing/protos/: CMakeLists.txt  trace_packet.proto
cactus_tracing/src/cactus_tracing/: thread_tracer.cc  tracer.cc
cactus_tracing/src/utils/: direct_proto_serialization.cc
cmake/: ros2.cmake
data/cyclictest-rpi4/: plot.ipynb
data/iceoryx_analysis/: analyze.ipynb
data/message_passing_example_analysis/: plot.ipynb  sleep.csv  sleep_and_busy_wait.csv
docker/: Dockerfile  README
docker/scripts/: 00-format.sh  01-build.sh  02-test.sh  03-benchmark.sh  04-example.sh  run-ros2.sh  run.sh
docs/: lockfree-queues.md  logging.md  ros2.md  tracing.md
docs/prefault-experiments/: Makefile  prefault-test.cc
examples/blog_examples/: .gitignore  Makefile  README.md  basic.cpp  loop.cpp  mutex.cpp
examples/default_example/: main.cc
examples/iceoryx_example/: CMakeLists.txt
examples/iceoryx_example/include/: app.h  data.h  publisher.h  subscriber.h
examples/iceoryx_example/src/: app.cc  main.cc  publisher.cc  subscriber.cc
examples/lockless_example/: CMakeLists.txt  main.cc
examples/lockless_examples/: CMakeLists.txt  README.md  realtime_read.cc
examples/logging_example/: CMakeLists.txt  README.md  main.cc
examples/lttng_ust_example/: CMakeLists.txt  README.rst  trace.sh
examples/lttng_ust_example/include/: tracepoint_provider.h
examples/lttng_ust_example/src/: main.cc  tracepoint_provider.cc
examples/message_passing_example/: CMakeLists.txt  README.md  README.rst  data_logger_thread.cc  data_logger_thread.h  main.cc  rt_thread.cc  rt_thread.h
examples/message_passing_example/include/: data_logger.h  rt_thread.h
examples/message_passing_example/src/: data_logger.cc  main.cc  rt_thread.cc
examples/mutex_example/: CMakeLists.txt  README.md  README.rst  double_buffer.h  main.cc
examples/mutex_example/include/: double_buffer.h
examples/mutex_example/src/: main.cc
examples/perfetto_example/: CMakeLists.txt  README.md  main.cc  notes.md
examples/random_example/: CMakeLists.txt  README.md  main.cc
examples/ros2/: README.md
examples/ros2/publisher/: CMakeLists.txt  complex_data.cc  main.cc  simple_data.cc
examples/ros2/subscriber/: CMakeLists.txt  complex_data.cc  main.cc  queued_data.cc  simple_data.cc
examples/ros2_example/: CMakeLists.txt
examples/roscon2024_examples/: CMakeLists.txt  ros_example.cc
examples/signal_handling_example/: CMakeLists.txt  README.md  main.cc
examples/simple_deadline_example/: CMakeLists.txt  README.md  main.cc
examples/simple_example/: CMakeLists.txt  README.md  README.rst  main.cc
examples/tracing_example/: CMakeLists.txt  README.md  main.cc  tracing.h
examples/tracing_example_no_rt/: CMakeLists.txt  README.md  main.cc
examples/tracing_protos_example/: CMakeLists.txt  README.md  synthetic_events.cc
examples/udp_example/: CMakeLists.txt  README.md
examples/udp_example/clientserver/: CMakeLists.txt  client.cc
examples/udp_example/flatudp/: CMakeLists.txt  flatudp.h  flatudp.h.old
examples/udp_example/messages/: CMakeLists.txt  robot_instantaneous_data.fbs
examples/udp_example/oneshot/: CMakeLists.txt  client.cc  server.cc
examples/udp_example/rtloop/: CMakeLists.txt  client.cc  server.cc
examples/udp_example/simpleudp/: simpleudp.cc  simpleudp.h
include/: cyclic_rt_thread.h  data_monitor.h  high_freq_controller.h  low_freq_controller.h  rt_app.h  thread.h
include/cactus_rt/: app.h  bounded_quill.h  config.h  cyclic_fifo_thread.h  cyclic_thread.h  latency_tracker.h  logger.h  logging.h  mutex.h  ros2.h  rt.h  scheduler.h  signal_handler.h  thread.h  tracing.h  utils.h
include/framework/: cyclic_rt_thread.h  rt_app.h  thread.h
include/rt/: app.h  cyclic_fifo_thread.h  latency_tracker.h  mutex.h
include/utils/: utils.h
libs/rt/: CMakeLists.txt
libs/rt/include/rt/: app.h  cyclic_fifo_thread.h  mutex.h  rt.h  thread.h  utils.h
libs/rt/src/: app.cc  cyclic_fifo_thread.cc  thread.cc
protos/: CMakeLists.txt  counter_descriptor.proto  interned_data.proto  process_descriptor.proto  source_location.proto  thread_descriptor.proto  trace.proto  trace_packet.proto  track_descriptor.proto  track_event.proto
scripts/: test-in-docker  test-ros-in-docker
simpler-examples/experiments/: .gitignore  prefault-stack-test.cc
simpler-examples/rt-setup-demo/: CMakeLists.txt
simpler-examples/rt-setup-demo/include/rt/: latency_tracker.h  utils.h
simpler-examples/rt-setup-demo/src/rt/: app.cc  cyclic_fifo_thread.cc  thread.cc
src/: app.cc  cyclic_rt_thread.cc  cyclic_thread.cc  data_monitor.cc  high_freq_controller.cc  latency_tracker.cc  lint_helper.cc  main.cc  probes.d  rt_app.cc  signal_handler.cc  thread.cc
src/base/: app.cc  latency_tracker.cc  signal_handler.cc
src/cactus_rt/: app.cc  cyclic_thread.cc  logging.cc  signal_handler.cc  thread.cc
src/framework/: cyclic_rt_thread.cc  (+2 more)
tests/: CMakeLists.txt  utils_test.cc
tests/experimental/: random_test.cc
tests/experimental/lockless/: atomic_bitset_test.cc
tests/experimental/lockless/spsc/: realtime_readable_value_test.cc  realtime_writable_value_test.cc
tests/ros2/: CMakeLists.txt  ping_pong_ros_thread.cc  ping_pong_ros_thread.h  ping_pong_test.cc
tests/tracing/: mock_sink.h  mock_threads.h  multi_threaded_test.cc  single_threaded_test.cc  string_interner_benchmark.cc  string_interner_test.cc  tracing_benchmark.cc  tracing_test.cc  utils.h
tests/tracing/helpers/: assert_helpers.cc  assert_helpers.h  mock_sink.cc  mock_sink.h  mock_threads.cc  mock_threads.h  utils.h
tla/: .gitignore
(+82 files in other folders)
