<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cactus_rt</name>
  <version>0.99.0</version>
  <description>A C++ framework for programming real-time applications</description>
  <maintainer email="shuhao@shuhaowu.com">Shuhao Wu</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>protobuf-dev</build_depend>
  <exec_depend>protobuf</exec_depend>
  <test_depend>gtest</test_depend>
  <test_depend>benchmark</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
